
	* lib/pytis/data/dbapi.py:
	Try to reopen db connection on before raising any DBSystemException.

2009-08-04  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbapi.py:
	Raise DBSystemException instead of DBUserException on disconnection from db.

2009-07-31  Pavel Hanak  <hanak@wpb.cz>

	* lib/pytis/form/application.py:
	Added forgotten argument 'column' when calling 'permitted' check..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/list.py:
	Show MIN/MAX aggregation results also for date/time and string columns..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Handle unicode in string values of aggregation results..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Make the DBException error message for unknown column even less confusing and translate it to English..

2009-07-28  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Allow aggregation functions MIN and MAX also on string and date/time columns..

2009-07-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Fixes of connection dictionary key handling in PostgreSQLUserGroups.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbdata.py:
	* lib/pytis/form/application.py:
	Update config.dbconnection destructively after Login dialog.

2009-07-28  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/spec.py:
	If there are no DMP and no form rights, assign default rights in Specification.

2009-07-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Add acceleration keys when building menu.
	

2009-07-16  Milan Zamazal  <pdm@brailcom.org>

	* doc/tutorials/DmpDb:
	DMP database editing document.

2009-07-15  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	Create menu separators in menus read from database.

2009-07-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py: