@@ -409,6 +409,9 @@ def recompute_tables(cursor):
     print "Computing rights..."
     cursor.execute("select pytis_update_summary_rights()")
     print "Computing rights...done"
+    print "Creating actions structure..."
+    cursor.execute("select pytis_update_actions_structure()")
+    print "Creating actions structure...done"
             
 def parse_options():
     usage = "usage: %prog [options] DEF_DIRECTORY"
